@@ -279,6 +279,7 @@ MODULE_SCOPE int projectPoints(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *
 MODULE_SCOPE int solvePnP(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 
 MODULE_SCOPE int computeCorrespondEpilines(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+MODULE_SCOPE int estimateAffine2D(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int findFundamentalMat(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int findHomography(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 
